--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -15,3 +15,4 @@ $successMessage: #bdd36e;
 $greenBackground: rgba(98, 189, 79, 1);
 $blueRgba: rgba(53, 113, 163, 0.2);
 $newGray: #433f3f;
+$errorMessage: #ff7474;
