--- a/styles/_recoveryPassword.scss
+++ b/styles/_recoveryPassword.scss
@@ -34,6 +34,37 @@
         margin-bottom: 0;
         width: 100%;
 
+        .pass-msg,
+        .pass-rep-msg {
+          background-color: $errorMessage;
+          color: white;
+          padding: 0.3rem 0.1rem;
+          text-align: center;
+          font-size: 13px;
+          border-radius: 2px;
+          position: relative;
+          width: 35%;
+          display: none;
+          margin-right: 80px;
+        }
+
+        .pass-msg.error {
+          display: block;
+        }
+
+        .sb4:before {
+          content: "";
+          width: 0px;
+          height: 0px;
+          position: absolute;
+          border-left: 10px solid transparent;
+          border-right: 10px solid transparent;
+          border-top: 10px solid $errorMessage;
+          border-bottom: 10px solid transparent;
+          right: 12%;
+          bottom: -20px;
+        }
+
         label {
           width: 50%;
           display: flex;
@@ -132,4 +163,34 @@
   &:hover {
     opacity: 1;
   }
+}
+
+.failure-icon {
+  color: $errorMessage;
+  margin-left: 0.5rem;
+  opacity: 0;
+  display: none;
+  position: absolute;
+  right: -20%;
+  bottom: 35px;
+  width: 40%;
+}
+.failure-icon.error {
+  opacity: 1;
+  display: inline-block;
+}
+.success-icon {
+  color: $whiteColor;
+  background-color: $successMessage;
+  margin-left: 0.5rem;
+  border-radius: 100%;
+  opacity: 0;
+  display: none;
+  position: absolute;
+  bottom: 35px;
+}
+
+.success-icon.success {
+  opacity: 1;
+  display: inline-block;
 }
