--- a/styles/_myProfile.scss
+++ b/styles/_myProfile.scss
@@ -115,6 +115,14 @@
         border: 1px solid $successMessage;
       }
 
+      .selector-success {
+        border: 1px solid $successMessage;
+      }
+
+      .selector-error {
+        border: 1px solid $errorMessage;
+      }
+
       .input-icons {
         input {
           display: flex;
