--- a/styles/_myProfile.scss
+++ b/styles/_myProfile.scss
@@ -147,6 +147,7 @@
           input {
             display: flex;
             align-self: center;
+            cursor: pointer;
           }
         }
 
@@ -246,14 +247,14 @@
   padding: 0 20px;
   max-height: 180px;
   overflow-y: auto;
-  transition: 0.4s linear 0.2s;
+  transition: 0.2s linear 0.1s;
   height: 0;
   z-index: 5;
   div {
     padding: 8px 0;
     font-weight: 500;
     font-size: 14px;
-    transition: 0.3s ease-in-out;
+    transition: 0.1s ease-in-out;
   }
 }
 
@@ -261,8 +262,8 @@
 .option.selected {
   color: #3571a3;
 }
-.option:hover,
-.option.selected {
+.option2:hover,
+.option2.selected2 {
   color: #3571a3;
 }
 
